# stepth_app

./: .gitignore  Readme.md  build.sh  run.sh
stepth-protos/: stepth.proto
stepth-server/: Cargo.toml
stepth-server/src/: build.rs  main.rs
stepthui_py/: ControlBlockDepth.qml  ControlBlockImage.qml  ControlBlockMask.qml  ControlBlockPixels.qml  MyButton.qml  MyTextButton.qml  build.sh  custom_slider.qml  logic.py  main.py  main.qml  stepth_client.py  stepth_pb2.py  stepth_pb2_grpc.py  stepthui_py.pyproject
