[package]
name = "stepth-server"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stepth-server"
path = "src/main.rs"

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
tokio-stream = "*"
stepth = {path = "../../stepth"}

[build-dependencies]
tonic-build = "*"
